[package]
edition = "2021"
name = "rust-adventure_rustmark-test"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.2.0", default-features = false, features = ["napi4"] }
napi-derive = "2.2.0"
pulldown-cmark = "0.9.1"

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
